# Berkeley-Humanoid-Lite

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.external-libs/berkeley-humanoid-lite-docs/: README.md  pyproject.toml
.external-libs/berkeley-humanoid-lite-docs/src/berkeley_humanoid_lite_docs/: __init__.py  sync_docs.py
docs/: README.md  fork-and-submodules-workflow.md  jetson-orin-nano-migration.md  mujoco-simulation-guide.md  policies-guide.md  sim2real-deployment-testing.md  training-guide.md  upgrade-isaac-5.0.md
docs/research/: gemini-robotics-integration.md  groot-n1-integration.md  lerobot-integration.md  pi0-integration.md
scripts/sim2sim/: play_mujoco.py
source/berkeley_humanoid_lite/: pyproject.toml
source/berkeley_humanoid_lite/berkeley_humanoid_lite/environments/: mujoco.py
source/berkeley_humanoid_lite/berkeley_humanoid_lite/tasks/: __init__.py
