[project]
name = "berkeley-humanoid-lite-workspace"
version = "1.1.0"
description = "Workspace for Berkeley Humanoid Lite"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch==2.7.0",
  "torchvision==0.22.0",
  "isaacsim[all,extscache]==5.0.0",
  "isaaclab[isaacsim,all]==2.2.0",
  "numpy",
  "omegaconf",
  "mujoco",
  "onnxruntime-gpu>=1.22.0",
  "cc.udp",
  "inputs",
  "pyaml",
  "meshcat",
  "meshcat_shapes",
  "scipy",
  "pin",
  "pin-pink",
  "qpsolvers[quadprog]",
  "loop_rate_limiters",
  "berkeley_humanoid_lite",
  "berkeley_humanoid_lite_assets",
  "berkeley_humanoid_lite_lowlevel",
]

[build-system]
requires = ["setuptools", "toml"]
build-backend = "setuptools.build_meta"

[tool.isort]

atomic = true
profile = "black"
line_length = 120
py_version = 311
skip_glob = ["docs/*", "logs/*"]
group_by_package = true

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "ISAACLABPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
extra_standard_library = [
    "numpy",
    "h5py",
    "open3d",
    "torch",
    "tensordict",
    "bpy",
    "matplotlib",
    "gymnasium",
    "gym",
    "scipy",
    "hid",
    "yaml",
    "prettytable",
    "toml",
    "trimesh",
    "tqdm",
    "psutil",
]
known_thirdparty = [
    "isaacsim.core.api",
    "omni.replicator.core",
    "pxr",
    "omni.kit.*",
    "warp",
    "carb",
    "Semantics",
]
known_isaaclabparty = [
    "isaaclab",
    "isaaclab_tasks",
    "isaaclab_assets",
    "isaaclab_mimic",
    "isaaclab_rl"
]

# Modify the following to include the package names of your first-party code
known_firstparty = "berkeley_humanoid_lite"
known_local_folder = "config"

[tool.pyright]

exclude = [
    "**/__pycache__",
    "**/docs",
    "**/logs",
    ".git",
    ".vscode",
]

typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy, torch, prettytable)
# Therefore, we have to ignore missing imports
reportMissingImports = "none"
# This is required to ignore for type checks of modules with stubs missing.
reportMissingModuleSource = "none" # -> most common: prettytable in mdp managers

reportGeneralTypeIssues = "none"       # -> raises 218 errors (usage of literal MISSING in dataclasses)
reportOptionalMemberAccess = "warning" # -> raises 8 errors
reportPrivateUsage = "warning"

[tool.setuptools]

package-dir = {"" = "source"}

[tool.uv.sources]

torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
isaacsim = { index = "nvidia" }
isaaclab = { index = "nvidia" }
berkeley_humanoid_lite = { workspace = true }
berkeley_humanoid_lite_assets = { workspace = true }
berkeley_humanoid_lite_lowlevel = { workspace = true }

[tool.uv.workspace]

members = [
    "source/berkeley_humanoid_lite",
    "source/berkeley_humanoid_lite_assets",
    "source/berkeley_humanoid_lite_lowlevel",
    ".external-libs/berkeley-humanoid-lite-docs",
]

[[tool.uv.index]]

name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]

name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true
